; ModuleID = '/home/carl/AnghaBench/linux/fs/hpfs/extr_alloc.c_do_trim.c'
source_filename = "/home/carl/AnghaBench/linux/fs/hpfs/extr_alloc.c_do_trim.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.super_block = type { i32 }

@current = common dso_local global i32 0, align 4
@EINTR = common dso_local global i32 0, align 4
@GFP_NOFS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.super_block*, i32, i32, i32, i32, i32, i32*)* @do_trim to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @do_trim(%struct.super_block* %0, i32 %1, i32 %2, i32 %3, i32 %4, i32 %5, i32* %6) #0 {
  %8 = alloca i32, align 4
  %9 = alloca %struct.super_block*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32*, align 8
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  store %struct.super_block* %0, %struct.super_block** %9, align 8
  store i32 %1, i32* %10, align 4
  store i32 %2, i32* %11, align 4
  store i32 %3, i32* %12, align 4
  store i32 %4, i32* %13, align 4
  store i32 %5, i32* %14, align 4
  store i32* %6, i32** %15, align 8
  %18 = load i32, i32* @current, align 4
  %19 = call i64 @fatal_signal_pending(i32 %18)
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %24

21:                                               ; preds = %7
  %22 = load i32, i32* @EINTR, align 4
  %23 = sub nsw i32 0, %22
  store i32 %23, i32* %8, align 4
  br label %70

24:                                               ; preds = %7
  %25 = load i32, i32* %10, align 4
  %26 = load i32, i32* %11, align 4
  %27 = add i32 %25, %26
  store i32 %27, i32* %17, align 4
  %28 = load i32, i32* %10, align 4
  %29 = load i32, i32* %12, align 4
  %30 = icmp ult i32 %28, %29
  br i1 %30, label %31, label %33

31:                                               ; preds = %24
  %32 = load i32, i32* %12, align 4
  store i32 %32, i32* %10, align 4
  br label %33

33:                                               ; preds = %31, %24
  %34 = load i32, i32* %17, align 4
  %35 = load i32, i32* %13, align 4
  %36 = icmp ugt i32 %34, %35
  br i1 %36, label %37, label %39

37:                                               ; preds = %33
  %38 = load i32, i32* %13, align 4
  store i32 %38, i32* %17, align 4
  br label %39

39:                                               ; preds = %37, %33
  %40 = load i32, i32* %10, align 4
  %41 = load i32, i32* %17, align 4
  %42 = icmp uge i32 %40, %41
  br i1 %42, label %43, label %44

43:                                               ; preds = %39
  store i32 0, i32* %8, align 4
  br label %70

44:                                               ; preds = %39
  %45 = load i32, i32* %17, align 4
  %46 = load i32, i32* %10, align 4
  %47 = sub i32 %45, %46
  %48 = load i32, i32* %14, align 4
  %49 = icmp ult i32 %47, %48
  br i1 %49, label %50, label %51

50:                                               ; preds = %44
  store i32 0, i32* %8, align 4
  br label %70

51:                                               ; preds = %44
  %52 = load %struct.super_block*, %struct.super_block** %9, align 8
  %53 = load i32, i32* %10, align 4
  %54 = load i32, i32* %17, align 4
  %55 = load i32, i32* %10, align 4
  %56 = sub i32 %54, %55
  %57 = load i32, i32* @GFP_NOFS, align 4
  %58 = call i32 @sb_issue_discard(%struct.super_block* %52, i32 %53, i32 %56, i32 %57, i32 0)
  store i32 %58, i32* %16, align 4
  %59 = load i32, i32* %16, align 4
  %60 = icmp ne i32 %59, 0
  br i1 %60, label %61, label %63

61:                                               ; preds = %51
  %62 = load i32, i32* %16, align 4
  store i32 %62, i32* %8, align 4
  br label %70

63:                                               ; preds = %51
  %64 = load i32, i32* %17, align 4
  %65 = load i32, i32* %10, align 4
  %66 = sub i32 %64, %65
  %67 = load i32*, i32** %15, align 8
  %68 = load i32, i32* %67, align 4
  %69 = add i32 %68, %66
  store i32 %69, i32* %67, align 4
  store i32 0, i32* %8, align 4
  br label %70

70:                                               ; preds = %63, %61, %50, %43, %21
  %71 = load i32, i32* %8, align 4
  ret i32 %71
}

declare dso_local i64 @fatal_signal_pending(i32) #1

declare dso_local i32 @sb_issue_discard(%struct.super_block*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
